# shakti_riscv_hal

./: Cargo.toml  README.md  build.rs  memory.x  vajra.x
.cargo/: config.toml
.github/workflows/: rust.yml
examples/gpio_applns/: Cargo.toml
examples/gpio_applns/.cargo/: config.toml
examples/gpio_applns/src/: gpio_constants.rs  main.rs
examples/uart_applns/: Cargo.toml
examples/uart_applns/src/: main.rs
src/: cnint.rs  ext_flash.rs  gpio.rs  i2c.rs  lib.rs  main.rs  pwm.rs  spi.rs  uart.rs
