[package]
name = "vajra_flash_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
riscv = "0.10"
volatile-register = "0.2.2"
tock-registers = {version = "0.9.0"}


