[package]
name = "shakti_riscv_hal"
version = "0.1.2"
authors = ["Yashwanth Singh M <yashwanthsinghm@gmail.com>"]
description = "Hardware abstraction layer for Shakti processor"
repository = "https://github.com/yashwanthsinghm/shakti_riscv_hal"
documentation = "https://docs.rs/stm32-hal2,https://shakti.org.in/docs/shakti-soc-user-manual.pdf,https://shakti.org.in/docs/shakti-soc-device-register-manual.pdf"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
riscv = "0.10"
volatile-register = "0.2.2"
tock-registers = {version = "0.9.0"}


